--- a/.github/workflows/OrbitWebAPI20210503105630.yml
+++ b/.github/workflows/OrbitWebAPI20210503105630.yml
@@ -1,8 +1,7 @@
 name: Build and deploy .NET Core application to windows webapp OrbitWebAPI20210503105630 with API Management Service OrbitServerlessapi
 on:
-  push:
-    branches:
-    - main
+  workflow_dispatch:
+
 env:
   AZURE_WEBAPP_NAME: OrbitWebAPI20210503105630
   DOTNET_CORE_VERSION: 5.0.x
